fix: code block in chat not following dark mode

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -4770,3 +4770,8 @@ section#settings a:hover {
   padding: 0 0.5rem;
 }
 
+code {
+  color: var(--s2d6-select-light);
+  background: var(--color-cool-4);
+  border-color: var(--color-cool-3);
+}
